--- a/AnotherTest/css/general.css
+++ b/AnotherTest/css/general.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 html {
 	scroll-behavior: smooth;
-    background-color:#000080;
+    background-color:#FFFFFF;
 }
 body {        
 	scroll-behavior: smooth; 
