--- a/uBetCha/MasterPage.master
+++ b/uBetCha/MasterPage.master
@@ -6,6 +6,7 @@
 <head runat="server">
     <title>UBetChA</title>
     <link href="css/StyleSheet.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/c2ffede26f.js" crossorigin="anonymous"></script>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -14,25 +15,28 @@
         <div class="fixed-header">
         <div class="container">
 		<a href="Default.aspx" class="logo"><img src="images/logoheader.png" /></a>
+            <span class="alignright"><a class="login"><i class="fas fa-user"></i> Login</a></span>
             <nav>
                 <a class="active" href="Default.aspx">Home</a>
-                <a href="mortgage-news.aspx">Mortgage News</a>
-                <a href="reverse-mortgage.aspx">Reverse Mortgage</a>
+                <a href="upcoming-games.aspx">Upcoming Games</a>
+                <a href="betting.aspx">Betting</a>
+                <a href="how-to-bet.aspx">How To Bet</a>
    		    </nav>
 		</div>
         </div>
         <div class="container">
             <div class="container">
-            <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-            
-            </asp:ContentPlaceHolder>
+
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+
         </div>
         </div>
         <div class="fixed-footer">
         <div class="container">
-          <p class="textcenter"><a href="Default.aspx">Home</a> | <a href="mortgage-news.aspx">Mortgage News</a> | <a href="reverse-mortgage.aspx">Reverse Mortgage</a></p>
+          <p class="textcenter"><a href="Default.aspx">Home</a> | <a href="upcoming-games.aspx">Upcoming Games</a> | <a href="betting.aspx">Betting</a> | <a href="how-to-bet.aspx">How To Bet</a></p>
 		  <div class="textcenter" id="copyright">
-              <pre>Copyright ©2021 Mortgageify</pre>
+              <pre>Copyright ©2021 uBetCha</pre>
             </div>
         </div>
   	    </div>
