--- a/balloonfeststart2_11_21/balloonmainMasterPage2.master
+++ b/balloonfeststart2_11_21/balloonmainMasterPage2.master
@@ -62,6 +62,9 @@
             <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="Reports.aspx">Reports</a>
           </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="Reviews.aspx">Reviews</a>
+          </li>
         </ul>
       </div>
     </div>
