--- a/uBetCha/css/StyleSheet.css
+++ b/uBetCha/css/StyleSheet.css
@@ -6,11 +6,6 @@ body {
     margin: 0px;
     color: #000000;
 }
-#wrapper {
-    height: auto;
-    min-height: 100%;
-    margin: 0 auto;
-}
 p {
 	font-size: 22px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -36,7 +31,7 @@ nav a.active {
     padding: 10px 0;
 }
 	.fixed-footer {
-		padding-top: 15px;
+		padding-top: 10px;
         left: 0;
         bottom: 0;
         position: fixed;
@@ -200,6 +195,10 @@ td {
 .alignright {
     float: right;
     text-align: right;
+}
+.login {
+    text-decoration: none;
+    color: #000000;
 }
 .login:hover {
     color: #46CDCF;
