--- a/uBetCha/MasterPage.master
+++ b/uBetCha/MasterPage.master
@@ -6,6 +6,7 @@
 <head runat="server">
     <title>UBetChA</title>
     <link href="css/StyleSheet.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="images/logo.png"/>
     <script src="https://kit.fontawesome.com/c2ffede26f.js" crossorigin="anonymous"></script>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
