--- a/uBetCha/MasterPage.master
+++ b/uBetCha/MasterPage.master
@@ -23,6 +23,7 @@
                 <a href="upcoming-games.aspx">Upcoming Games</a>
                 <a href="betting.aspx">Betting</a>
                 <a href="how-to-bet.aspx">How To Bet</a>
+                <a href="MemberPages/MyAccount.aspx">MyAccount</a>
    		    </nav>
 		</div>
         </div>
