Titles, Admin Page, Up Coming Games, Betting, Footer

--- a/uBetCha/MasterPage.master
+++ b/uBetCha/MasterPage.master
@@ -15,7 +15,7 @@
     <form id="form1" runat="server">
         <div class="fixed-header">
         <div class="container">
-		<a href="Default.aspx" class="logo"><img src="/images/logoheader.png" /></a>
+		<a href="/Default.aspx" class="logo"><img src="/images/logoheader.png" /></a>
             <div class="alignright"><h5><i class="fas fa-user"></i> <asp:LoginStatus ID="LoginStatus1" runat="server" CssClass="login" /></h5></div>
             <nav>
                 <a href="/Default.aspx">Home</a>
@@ -33,7 +33,7 @@
 
         <div class="fixed-footer">
         <div class="container">
-          <p class="textcenter"><a href="Default.aspx">Home</a> | <a href="upcoming-games.aspx">Upcoming Games</a> | <a href="betting.aspx">Betting</a> | <a href="how-to-bet.aspx">How To Bet</a></p>
+          <p class="textcenter"><a href="/Default.aspx">Home</a> | <a href="/Teams.aspx">Teams</a> | <a href="/upcoming-games.aspx">Upcoming Games</a> | <a href="/betting.aspx">Betting</a> | <a href="/how-to-bet.aspx">How To Bet</a> | <a href="/MemberPages/MyAccount.aspx">My Account</a> | <a href="/AdminPages/Admin.aspx">Admin</a></p>
 		  <div class="textcenter" id="copyright">
               <pre>Copyright ©2021 uBetCha</pre>
             </div>
